# ddns

./: LICENSE  README.md  deploy.sh  pyproject.toml
examples/: config.toml
src/ddns_cf/: __init__.py  cli.py  cloudflare.py  config.py  http.py  ip.py  service.py  telegram.py
systemd/: ddns-cf.service
tests/: test_config.py  test_service.py
