[project]
name = "ddns-cf"
version = "0.1.0"
description = "Minimal Cloudflare DDNS service with optional Telegram notifications."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.scripts]
ddns-cf = "ddns_cf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
